@@ -21,6 +21,7 @@ import static org.junit.Assert.assertTrue;
 import java.io.IOException;
 import java.util.Objects;
 
+import io.vertx.core.json.JsonObject;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
@@ -375,7 +376,8 @@ public class SchemaChangesEndpointTest extends AbstractNodeSearchEndpointTest {
 
 		// 1. Setup changes
 		SchemaChangesListModel listOfChanges = new SchemaChangesListModel();
-		SchemaChangeModel change = SchemaChangeModel.createAddFieldChange("newField", "html", "label1234");
+		JsonObject elasticSearch = new JsonObject().put("test", "test");
+		SchemaChangeModel change = SchemaChangeModel.createAddFieldChange("newField", "html", "label1234", elasticSearch);
 		listOfChanges.getChanges().add(change);
 
 		// 3. Invoke migration
@@ -401,7 +403,8 @@ public class SchemaChangesEndpointTest extends AbstractNodeSearchEndpointTest {
 					boot().contentDao().getGraphFieldContainer(node, "en").getSchemaContainerVersion().getVersion()));
 			assertEquals("label1234",
 				boot().contentDao().getGraphFieldContainer(node, "en").getSchemaContainerVersion().getSchema().getField("newField").getLabel());
-
+			assertEquals(elasticSearch,
+					boot().contentDao().getGraphFieldContainer(node, "en").getSchemaContainerVersion().getSchema().getField("newField").getElasticsearch());
 		}
 	}
 	
@@ -414,7 +417,7 @@ public class SchemaChangesEndpointTest extends AbstractNodeSearchEndpointTest {
 
 		// 1. Setup changes
 		SchemaChangesListModel listOfChanges = new SchemaChangesListModel();
-		SchemaChangeModel change = SchemaChangeModel.createAddFieldChange("newField", "string", "label1234");
+		SchemaChangeModel change = SchemaChangeModel.createAddFieldChange("newField", "string", "label1234", null);
 		change.getProperties().put(SchemaChangeModel.ALLOW_KEY, new String[] {"5678"});
 		
 		listOfChanges.getChanges().add(change);
@@ -452,7 +455,7 @@ public class SchemaChangesEndpointTest extends AbstractNodeSearchEndpointTest {
 
 		// 1. Setup changes
 		SchemaChangesListModel listOfChanges = new SchemaChangesListModel();
-		SchemaChangeModel change = SchemaChangeModel.createAddFieldChange("newField", "string", "label1234");
+		SchemaChangeModel change = SchemaChangeModel.createAddFieldChange("newField", "string", "label1234", null);
 		change.getProperties().put(SchemaChangeModel.ALLOW_KEY, new String[] {"5678"});
 		
 		listOfChanges.getChanges().add(change);
@@ -528,7 +531,7 @@ public class SchemaChangesEndpointTest extends AbstractNodeSearchEndpointTest {
 
 			// 1. Setup changes
 			SchemaChangesListModel listOfChanges = new SchemaChangesListModel();
-			SchemaChangeModel change = SchemaChangeModel.createAddFieldChange("newField_" + i, "html", null);
+			SchemaChangeModel change = SchemaChangeModel.createAddFieldChange("newField_" + i, "html", null, null);
 			listOfChanges.getChanges().add(change);
 
 			GenericMessageResponse status = call(() -> client().applyChangesToSchema(containerUuid, listOfChanges));
